# pycorrector-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  example_client.py  pyproject.toml
src/pycorrector/: __init__.py  adapters.py  api.py  constants.py  custom.txt  demo.py  factory.py  models.py  qwen_adapter.py  settings.py  utils.py
src/pycorrector/resources/: confusions.txt
static/: index.html
