[project]
name = "pycorrector"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gong", email = "517441540@qq.com"},
]
dependencies = [
    "pycorrector>=1.1.3",
    "torch>=2.7.1",
    "kenlm>=0.3.0",
    "accelerate>=1.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "dashscope>=1.14.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "pdm run ./src/pycorrector/__init__.py"
start = "pdm run uvicorn src.pycorrector.api:app --host 0.0.0.0 --port 8000"
